# Fairy-Stockfish

./: .gitignore
cmake/: CMakeLists.txt
src/: material.cpp  movegen.cpp  parser.cpp  search.cpp  types.h  ucioption.cpp  variants.ini
